# Epochalypse---HackCrypt

./: .gitignore  README.md  docker-compose.yml  read_results.py
backend/: .dockerignore  Dockerfile  README.md  ai-detector.html  ai_detector_backend.py  pyproject.toml  requirements.txt  results.txt
backend/api/: main.py
backend/api/core/: config.py
backend/api/routes/: __init__.py  ai_detection.py  audio_detection.py  auth.py  detection.py  health.py  image_detection.py
backend/api/schemas/: detection.py
backend/api/services/: __init__.py  ai_detector.py  efficientnet_detector.py  genconvit_detector.py  genconvit_service.py  model_manager.py  npr_detector.py  temporal.py  universal_fake_detector.py  video_service.py
backend/api/utils/: __init__.py  preprocessing.py  video.py
backend/config/: .gitkeep
backend/model/audio/: detector.py  test_model.py
backend/model/image/: detector.py  test_image.py
backend/model/image/weights/: downloader.py
backend/model/video/: frequency_utils.py  gradcam_utils.py  veridis_quo_hybrid.py
backend/model/video/GenConViT/: fastapi_app.py  prediction.py  training_log.txt
backend/model/video/GenConViT/json_file/: single.json
backend/model/video/GenConViT/result/: prediction_other_ed_January_14_2026_23_14_27.json  prediction_other_ed_January_16_2026_13_08_32.json  prediction_other_ed_January_16_2026_15_08_46.json  prediction_other_ed_January_16_2026_15_17_25.json  prediction_other_ed_January_16_2026_15_18_17.json  prediction_other_ed_January_16_2026_15_28_17.json  prediction_other_ed_January_16_2026_15_35_24.json  (+6 more)
(+30 files in other folders)
