[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.6",
    "ultralytics>=8.4.4",
    "uvicorn>=0.40.0",
]
